oop-in-apex/force-app/main/default/objects/Certification_Attempt__c/fields/Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Date__c</fullName>
    <description>Date a candidate tries to pass a Multiple Choice certification element.</description>
    <label>Attempt Date</label>
    <type>Date</type>
</CustomField>