oop-in-apex/force-app/main/default/objects/Certification_Attempt__c/fields/Certification_Element__c.field-meta.xml
<CustomField>
    <fullName>Certification_Element__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Certification element for this attempt</description>
    <label>Certification Element</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Multiple Choice</value>
        </filterItems>
        <filterItems>
            <field>Certification_Element__c.Type__c</field>
            <operation>equals</operation>
            <value>Multiple Choice</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lab</value>
        </filterItems>
        <filterItems>
            <field>Certification_Element__c.Type__c</field>
            <operation>equals</operation>
            <value>Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certification_Element__c</referenceTo>
    <relationshipLabel>Certification Attempts</relationshipLabel>
    <relationshipName>Certification_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>