oop-in-apex/force-app/main/default/objects/Certification_Attempt__c/fields/Certifying_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Certifying_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Instructor who certifies candidate.</description>
    <label>Certifying Instructor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Is_Instructor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Certification_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>