oop-in-apex/force-app/main/default/objects/Certification_Attempt__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date a candidate completed a Lab certification element.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>