oop-in-apex/force-app/main/default/objects/Certification_Attempt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of a certification attempt.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete/Pass</fullName>
            </value>
            <value>
                <fullName>Complete/Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>